fix #101: fix 'out of drop area behavior' on slide item dragging

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.scss
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.scss
@@ -22,6 +22,10 @@
     &.is-dragged {
         display: none;
     }
+
+    &.is-leaving {
+        display: block;
+    }
 }
 
 .blur-es-list-item__name-tag {
