--- a/src/Resources/views/storefront/component/blur-elysium-slide/container.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/container.html.twig
@@ -1,58 +1,81 @@
 {% block cms_element_blur_elysium_slide_container %}
-    <div class="cms-element-elysium-slide__container{{contentVerticalAlign}}">
-        {% set headlineElement = 'div' %}
+    {% set contentContainerClasses = ['cms-element-elysium-slide__container'] %}
+    {% set contentBoxClasses = ['cms-element-elysium-slide__content-box'] %}
 
-        {% if slide.slideSettings.headlineElement %}
-            {% set headlineElement = slide.slideSettings.headlineElement %}
-        {% endif %}
+    {% if containerWidth is same as('content') %}
+        {% set contentContainerClasses = contentContainerClasses|merge([
+            'container'
+        ]) %}
+    {% else %}
+        {% set contentContainerClasses = contentContainerClasses|merge([
+            'container-fluid'
+        ]) %}
+    {% endif %}
 
-        {% block cms_element_blur_elysium_slide_title %}
-        
-            {% set headlineTagsWhitelist = [
-                '<br>',
-                '<i>',
-                '<b>',
-                '<u>',
-                '<strong>',
-                '<span>'
-            ] %}
+    {% if contentVerticalAlign %}
+        {% set contentBoxClasses = contentBoxClasses|merge([
+            contentVerticalAlign
+        ]) %}
+    {% endif %}
 
-            {% if slide.translated.title %}
-                <{{headlineElement|raw}} class="{% block blur_elysium_slide_title_class %}cms-element-elysium-slide__title font-weight-bold fluid-text-title{% endblock %}">
-                    {{ slide.translated.title|striptags( headlineTagsWhitelist|join )|raw }}
-                </{{headlineElement|raw}}>                
-            {% endif %}
-        {% endblock %}
+    {% block cms_element_blur_elysium_slide_content_box %}
+        <div class="{{contentContainerClasses|join(' ')}}">
+            <div class="{{contentBoxClasses|join(' ')}}">
+                {% set headlineElement = 'div' %}
 
-        {% block cms_element_blur_elysium_slide_description %}
-            {% if slide.translated.description %}
-                <div class="{% block blur_elysium_slide_description_class %}cms-element-elysium-slide__description fluid-text-description{% endblock %}">
-                    {{ slide.translated.description|raw }}
-                </div>                
-            {% endif %}
-        {% endblock %}
+                {% if slide.slideSettings.headlineElement %}
+                    {% set headlineElement = slide.slideSettings.headlineElement %}
+                {% endif %}
 
-        {% block cms_element_blur_elysium_slide_actions %}
-            {% if ( slide.translated.button_label and slide.translated.url ) and slide.slideSettings.urlOverlay is not same as( true ) %}
-                <div class="cms-element-elysium-slide__actions">
-                    
-                    {% block cms_element_blur_elysium_slide_action_cta_button %}
+                {% block cms_element_blur_elysium_slide_title %}
+                
+                    {% set headlineTagsWhitelist = [
+                        '<br>',
+                        '<i>',
+                        '<b>',
+                        '<u>',
+                        '<strong>',
+                        '<span>'
+                    ] %}
 
-                        <a href="{{ slide.translated.url }}" 
-                            title="{{ slide.translated.button_label }}" 
-                            class="{% block blur_elysium_slide_button_class %}btn{% if slide.slideSettings.buttonAppearance %} btn-{{slide.slideSettings.buttonAppearance}}{% endif %} cms-element-elysium-slide__cta-button fluid-text-button{% endblock %}"
-                            {% if slide.slideSettings.urlTarget == "external" %}
-                                target="_blank"
-                                rel="noopener"
-                            {% endif %}
-                            >
+                    {% if slide.translated.title %}
+                        <{{headlineElement|raw}} class="{% block blur_elysium_slide_title_class %}cms-element-elysium-slide__title font-weight-bold fluid-text-title{% endblock %}">
+                            {{ slide.translated.title|striptags( headlineTagsWhitelist|join )|raw }}
+                        </{{headlineElement|raw}}>                
+                    {% endif %}
+                {% endblock %}
+
+                {% block cms_element_blur_elysium_slide_description %}
+                    {% if slide.translated.description %}
+                        <div class="{% block blur_elysium_slide_description_class %}cms-element-elysium-slide__description fluid-text-description{% endblock %}">
+                            {{ slide.translated.description|raw }}
+                        </div>                
+                    {% endif %}
+                {% endblock %}
+
+                {% block cms_element_blur_elysium_slide_actions %}
+                    {% if ( slide.translated.button_label and slide.translated.url ) and slide.slideSettings.urlOverlay is not same as( true ) %}
+                        <div class="cms-element-elysium-slide__actions">
                             
-                            {{ slide.translated.button_label }}
-                        </a>        
-                    {% endblock %}
-                </div>
-            {% endif %}
-        {% endblock %}
+                            {% block cms_element_blur_elysium_slide_action_cta_button %}
 
-    </div>
+                                <a href="{{ slide.translated.url }}" 
+                                    title="{{ slide.translated.button_label }}" 
+                                    class="{% block blur_elysium_slide_button_class %}btn{% if slide.slideSettings.buttonAppearance %} btn-{{slide.slideSettings.buttonAppearance}}{% endif %} cms-element-elysium-slide__cta-button fluid-text-button{% endblock %}"
+                                    {% if slide.slideSettings.urlTarget == "external" %}
+                                        target="_blank"
+                                        rel="noopener"
+                                    {% endif %}
+                                    >
+                                    
+                                    {{ slide.translated.button_label }}
+                                </a>        
+                            {% endblock %}
+                        </div>
+                    {% endif %}
+                {% endblock %}
+
+            </div>
+        </div>
+    {% endblock %}
 {% endblock %}
