fix: correct slide collection for different languages

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
@@ -18,7 +18,7 @@
                             <sw-icon name="regular-grip-horizontal-s" size="16" color="#999999"></sw-icon>
                         </div>
                         <div class="blur-es-list-item__name-tag">
-                            {{slideData.name}}
+                            {{slideData.translated.name}}
                         </div>
                     </div>
 
@@ -26,7 +26,7 @@
                         <div class="blur-es-list-item__slide-content">
                             <div>
                                 <div class="blur-es-list-item__slide-headline">
-                                    {{slideData.title.replace(/<\/?[^>]+>/ig, " ")}}
+                                    {{slideData.translated.title.replace(/<\/?[^>]+>/ig, " ")}}
                                 </div>
                             </div>
                         </div>
