fix: correct slide-selection in cms-slider if headline is missing

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
@@ -26,7 +26,7 @@
                         <div class="blur-es-list-item__slide-content">
                             <div>
                                 <div class="blur-es-list-item__slide-headline">
-                                    {{slideData.translated.title.replace(/<\/?[^>]+>/ig, " ")}}
+                                    {{ slideData.translated.title ? slideData.translated.title.replace(/<\/?[^>]+>/ig, " ") : $tc('blurElysiumSlider.general.noHeadline') }}
                                 </div>
                             </div>
                         </div>
