fix: slide-selection translation, slide-button display

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
@@ -12,14 +12,14 @@
                 <div class="blur-es-list-item__slide-container">
 
                     <div class="blur-es-list-item__name-tag">
-                        {{slideData.name}}
+                        {{slideData.translated.name}}
                     </div>
 
                     {% block blur_elysium_slide_select_item_silde_content %} 
                         <div class="blur-es-list-item__slide-content">
                             <div>
                                 <div class="blur-es-list-item__slide-headline">
-                                    {{slideData.title}}
+                                    {{slideData.translated.title}}
                                 </div>
                             </div>
                         </div>
